# Tetris

./: README.md
Tetris/: CMakeLists.txt
Tetris/gui/: CMakeLists.txt  firstwindow.cpp  firstwindow.h  firstwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Tetris/src/: CMakeLists.txt
Tetris/src/app/console/: Application.cpp  Application.h
Tetris/src/controller/: TetrisController.cpp  TetrisController.h
Tetris/src/model/: BagBrick.cpp  BagBrick.h  Box.cpp  Box.h  Brick.cpp  Brick.h  BrickFactory.cpp  BrickFactory.h  Color.hpp  Direction.hpp  Game.cpp  Game.h  Grid.cpp  Grid.h  Loader.cpp  Loader.h  Player.cpp  Player.h  Position.cpp  Position.h  Square.cpp  Square.h  TypeBrick.hpp
Tetris/src/model/util/: Notification.hpp  Observable.hpp  Observer.hpp  TetrisException.cpp  TetrisException.h  random.hpp
Tetris/src/resources/: resource.qrc
Tetris/src/view/console/: TetrisView.cpp  TetrisView.h
Tetris/test/: CMakeLists.txt  main.h  testMain.cpp
